--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,9 +83,11 @@ dependencies {
     // Fragment
     implementation 'androidx.fragment:fragment-ktx:1.3.1'
 
+    // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
+    //Datastore
     implementation "androidx.datastore:datastore-preferences:$dataStoreVersion"
 }
 
